--- a/main.css
+++ b/main.css
@@ -16,6 +16,8 @@ ul , ol{
     padding: 0;
 }
 
+
+
 a{
     -decoration: none;
     color: black;
@@ -215,3 +217,61 @@ height: 695px;
   display:flex;
   justify-content: space-between;
 }
+
+
+
+a:hover{
+  color:rgb(4, 4, 4);
+}
+
+
+/* hr.style-one {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+} */
+
+
+.elektronika__line{
+  height: 1px;
+  width: 1292px;
+  background: #80808030;
+}
+
+.for__list{
+  width: 250px;
+  margin: 30px 0px;
+  padding: 8px 0px;
+  border-radius: 5px;
+}
+
+.for__list:hover{
+  background-color: #87858552;
+}
+
+.for__box{
+  width: 265px;
+}
+.min__box-item{
+width: 1000px;
+  display: flex;
+/* justify-content: space-between; */
+flex-wrap: wrap;
+}
+
+.for{
+  display: flex;
+margin-top: 29px;
+}
+
+.gradient-custom {
+  /* fallback for old browsers */
+  background: #6a11cb;
+  
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+  
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+  }
